<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.martin.repartomanager.OrderFactory">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nuevo_pedido_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewNuevoPedido" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNombreCliente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/nombre"
        android:layout_below="@+id/textViewNuevoPedido"
        android:layout_marginTop="15dp"
        android:inputType="textCapWords"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCodigoPostal"
        android:layout_below="@+id/editTextNombreCliente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/codigo_postal"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDistancia"
        android:hint="@string/distancia_km"
        android:layout_below="@+id/editTextCodigoPostal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPrecio"
        android:hint="@string/precio_euros"
        android:layout_below="@+id/editTextDistancia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/datos_de_contacto"
        android:id="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextPrecio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textViewNuevoPedido"
        android:layout_alignStart="@+id/textViewNuevoPedido"
        android:src="@android:drawable/ic_menu_call"
        android:background="@color/accent_material_dark"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTelefono"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:hint="@string/telefono"
        android:layout_marginTop="10dp"
        android:inputType="phone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/editTextTelefono"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:src="@android:drawable/sym_action_email"
        android:background="@color/accent_material_dark"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/buttonGuardar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/ButtonStyle" />
</RelativeLayout>
