<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.martin.repartomanager.BestOrderInformation">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombreMejorPedido"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewnombreInfoMejorPedido"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/telefonoMejorPedido"
        android:id="@+id/textView7"
        android:layout_below="@+id/textViewnombreInfoMejorPedido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewTelefonoInfoMejorPedido"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emailMejorPedido"
        android:id="@+id/textView9"
        android:layout_below="@+id/textViewTelefonoInfoMejorPedido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/TextViewEmailInfoMejorPedido"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:stretchColumns="0,1,2"
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atrasMejorPedido"
                android:id="@+id/buttonAtras"
                android:layout_above="@+id/tableLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_column="1"
                android:layout_marginRight="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/llamar"
                android:id="@+id/buttonLlamar"
                android:layout_column="0"
                style="@style/ButtonStyle"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_email"
                android:id="@+id/buttonEmail"
                android:layout_column="1"
                style="@style/ButtonStyle"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar"
                android:id="@+id/buttonBorrar"
                android:layout_column="2"
                style="@style/ButtonStyle" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
